--- a/app/SINE/app/src/main/res/values/styles.xml
+++ b/app/SINE/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <item name="colorPrimary">@color/Sine5</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">@font/bitter</item>
     </style>
 
     <style name="MyMaterialTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
