--- a/app/SINE/app/src/main/res/layout-xlarge/content_info.xml
+++ b/app/SINE/app/src/main/res/layout-xlarge/content_info.xml
@@ -25,17 +25,6 @@
                 android:gravity="center">
 
                 <TextView
-                    android:id="@+id/titulo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/app_name"
-                    android:textAlignment="center"
-                    android:textColor="@color/cast_expanded_controller_background_color"
-                    android:textColorLink="@android:color/background_dark"
-                    android:textSize="32sp"
-                    android:textStyle="normal|bold" />
-
-                <TextView
                     android:id="@+id/versao"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -49,7 +38,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="249dp"
-                    app:srcCompat="@drawable/ic_profile"
+                    app:srcCompat="@drawable/ic_logo_sive"
                     android:id="@+id/imagemSine"
                     android:adjustViewBounds="true"
                     android:cropToPadding="true"
