--- a/app/SINE/app/src/main/res/layout-xlarge/content_search_for_graphic.xml
+++ b/app/SINE/app/src/main/res/layout-xlarge/content_search_for_graphic.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="trabalho.sine.activity.SearchForGraphicActivity"
-    tools:showIn="@layout/app_bar_graphic">
+    tools:showIn="@layout/app_bar_search_for_graphic">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,22 +14,24 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/label_search_graphic_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/label_search_graphic_view"
-            android:textSize="@dimen/font_size_activity_graphic_title"
-            android:textAlignment="center"
-            android:textStyle="bold"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:fontFamily="@font/bitter"
             android:text="@string/activity_search_graphic_title"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+            android:textAlignment="center"
+            android:textSize="@dimen/font_size_activity_graphic_title"
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/cargo_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bitter"
             android:text="@string/cargo_label"
-            android:id="@+id/cargo_text_view"
-            android:textStyle="bold"
-            android:textSize="@dimen/font_size_activity_graphic" />
+            android:textSize="@dimen/font_size_activity_graphic"
+            android:textStyle="bold" />
 
         <AutoCompleteTextView
             android:layout_width="match_parent"
@@ -41,11 +43,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/porte_label"
-            android:textSize="@dimen/font_size_activity_graphic"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:textStyle="bold"/>
+            android:fontFamily="@font/bitter"
+            android:text="@string/porte_label"
+            android:textSize="@dimen/font_size_activity_graphic"
+            android:textStyle="bold" />
 
         <RadioGroup
             android:layout_width="match_parent"
