--- a/app/SINE/app/src/main/res/layout-xlarge/nav_header.xml
+++ b/app/SINE/app/src/main/res/layout-xlarge/nav_header.xml
@@ -17,6 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/ic_logo_sive" />
 
 </LinearLayout>
