--- a/app/SINE/app/src/main/res/layout-large/list_view_adapter.xml
+++ b/app/SINE/app/src/main/res/layout-large/list_view_adapter.xml
@@ -62,7 +62,7 @@
                     android:layout_margin="2dp"
                     android:text="Empresa"
                     android:textAlignment="viewStart"
-                    android:textColor="@color/place_autocomplete_search_text"
+                    android:textColor="@color/text_font"
                     android:textSize="16sp" />
 
                 <TextView
@@ -72,7 +72,7 @@
                     android:layout_margin="2dp"
                     android:text="Endereco"
                     android:textAlignment="viewStart"
-                    android:textColor="@color/place_autocomplete_search_text"
+                    android:textColor="@color/text_font"
                     android:textSize="16sp" />
 
             </LinearLayout>
