--- a/app/SINE/app/src/main/res/layout-normal/content_result.xml
+++ b/app/SINE/app/src/main/res/layout-normal/content_result.xml
@@ -50,8 +50,8 @@
                         android:text="@string/titulo_da_vaga"
                         android:textAlignment="center"
                         android:textAllCaps="false"
-                        android:textColor="@color/cast_expanded_controller_background_color"
-                        android:textSize="24sp"
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -67,8 +67,9 @@
 
                     <ImageView
                         android:id="@+id/moneyLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="top|center_vertical"
                         android:contentDescription="@string/todo"
                         android:src="@drawable/money" />
 
@@ -95,8 +96,9 @@
 
                     <ImageView
                         android:id="@+id/cityLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="top|center_vertical"
                         android:contentDescription="@string/todo"
                         android:paddingEnd="5dp"
                         android:src="@drawable/city"
@@ -126,8 +128,9 @@
 
                     <ImageView
                         android:id="@+id/addressLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="top|center_vertical"
                         android:contentDescription="@string/todo"
                         android:paddingEnd="5dp"
                         android:src="@drawable/address"
@@ -157,8 +160,9 @@
 
                     <ImageView
                         android:id="@+id/companyLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="top|center_vertical"
                         android:contentDescription="@string/todo"
                         android:src="@drawable/company" />
 
@@ -184,8 +188,9 @@
 
                     <ImageView
                         android:id="@+id/functionLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="top|center_vertical"
                         android:contentDescription="@string/todo"
                         android:paddingEnd="5dp"
                         android:src="@drawable/function"
@@ -215,8 +220,9 @@
 
                     <ImageView
                         android:id="@+id/descriptionLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="top|center_vertical"
                         android:contentDescription="@string/todo"
                         android:paddingEnd="5dp"
                         android:src="@drawable/description"
@@ -256,6 +262,7 @@
                             app:layout_constraintTop_toTopOf="parent"
                             app:srcCompat="@drawable/share" />
 
+
                         <android.support.design.widget.FloatingActionButton
                             android:id="@+id/favoriteFloat"
                             android:layout_width="wrap_content"
@@ -266,7 +273,7 @@
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:srcCompat="@drawable/favorite_border" />
+                            app:srcCompat="@drawable/favorite_border_white" />
 
                         <android.support.design.widget.FloatingActionButton
                             android:id="@+id/openLink"
