--- a/app/SINE/app/src/main/res/layout-xlarge/content_result.xml
+++ b/app/SINE/app/src/main/res/layout-xlarge/content_result.xml
@@ -61,8 +61,8 @@
                                 android:text="@string/titulo_da_vaga"
                                 android:textAlignment="center"
                                 android:textAllCaps="false"
-                                android:textColor="@color/cast_expanded_controller_background_color"
-                                android:textSize="24sp"
+                                android:textColor="@android:color/black"
+                                android:textSize="26sp"
                                 android:textStyle="bold" />
 
                         </LinearLayout>
@@ -80,8 +80,9 @@
                                 android:id="@+id/moneyLabel"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/money"
-                                android:contentDescription="@string/todo" />
+                                android:layout_gravity="top|center_vertical"
+                                android:contentDescription="@string/todo"
+                                android:src="@drawable/money" />
 
                             <TextView
                                 android:id="@+id/moneyValue"
@@ -108,10 +109,11 @@
                                 android:id="@+id/cityLabel"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="top|center_vertical"
+                                android:contentDescription="@string/todo"
                                 android:paddingEnd="5dp"
                                 android:src="@drawable/city"
-                                tools:ignore="RtlSymmetry"
-                                android:contentDescription="@string/todo" />
+                                tools:ignore="RtlSymmetry" />
 
                             <TextView
                                 android:id="@+id/cityValue"
@@ -139,10 +141,11 @@
                                 android:id="@+id/addressLabel"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="top|center_vertical"
+                                android:contentDescription="@string/todo"
                                 android:paddingEnd="5dp"
                                 android:src="@drawable/address"
-                                tools:ignore="RtlSymmetry"
-                                android:contentDescription="@string/todo" />
+                                tools:ignore="RtlSymmetry" />
 
                             <TextView
 
@@ -170,8 +173,9 @@
                                 android:id="@+id/companyLabel"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/company"
-                                android:contentDescription="@string/todo" />
+                                android:layout_gravity="top|center_vertical"
+                                android:contentDescription="@string/todo"
+                                android:src="@drawable/company" />
 
                             <TextView
 
@@ -197,10 +201,11 @@
                                 android:id="@+id/functionLabel"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="top|center_vertical"
+                                android:contentDescription="@string/todo"
                                 android:paddingEnd="5dp"
                                 android:src="@drawable/function"
-                                tools:ignore="RtlSymmetry"
-                                android:contentDescription="@string/todo" />
+                                tools:ignore="RtlSymmetry" />
 
                             <TextView
 
@@ -228,10 +233,11 @@
                                 android:id="@+id/descriptionLabel"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="top|center_vertical"
+                                android:contentDescription="@string/todo"
                                 android:paddingEnd="5dp"
                                 android:src="@drawable/description"
-                                tools:ignore="RtlSymmetry"
-                                android:contentDescription="@string/todo" />
+                                tools:ignore="RtlSymmetry" />
 
                             <TextView
                                 android:id="@+id/descriptionValue"
@@ -278,7 +284,7 @@
                                     app:layout_constraintLeft_toLeftOf="parent"
                                     app:layout_constraintRight_toRightOf="parent"
                                     app:layout_constraintTop_toTopOf="parent"
-                                    app:srcCompat="@drawable/favorite_border" />
+                                    app:srcCompat="@drawable/favorite_border_white" />
 
                                 <android.support.design.widget.FloatingActionButton
                                     android:id="@+id/openLink"
