--- a/app/SINE/app/src/main/res/values/styles.xml
+++ b/app/SINE/app/src/main/res/values/styles.xml
@@ -6,9 +6,9 @@
     <style name="MyMaterialTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
-        <item name="colorPrimary">@color/Sine5</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/Sine4</item>
         <item name="android:fontFamily">@font/bitter</item>
     </style>
 
